# fba2mat

./: README.md  pyproject.toml
scripts/: run.py
src/fba2mat/: __init__.py  convert.py
